--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-
+     <h2>welcome to my application <h2>
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="florida">
