feat:add a title to the index page
I add new title to do a good commit with the udacity git-stylguide

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-     <h2>welcome to my application <h2>
+     <h2>welcome to my application I created to do a a good commit <h2>
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="florida">
